# UnifiedTaskManager

./: .dockerignore  .env.example  .env.production.example  .gitignore  .golangci.yml  README.md  docker-compose.local.yml  docker-compose.vps-build.yml  docker-compose.yml
deploy/caddy/: Caddyfile
deploy/loki/: loki-config.yml
deploy/nginx/: default.conf  nginx.conf  vps.conf
deploy/prometheus/: prometheus.yml
deploy/promtail/: promtail-config.yml
docs/: user-service.md
libs/contracts/: envelope.schema.json  user.exists.request.schema.json  user.exists.response.schema.json
libs/json_py/: __init__.py  json.py
libs/log_py/: __init__.py  logger.py
libs/mq-go/: go.mod
libs/mq-rust/: Cargo.toml
libs/mq-rust/src/: client.rs  error.rs  lib.rs  types.rs
libs/mq_py/: __init__.py  client.py  error.py  types.py
libs/observability-go/: go.mod  observability.go
services/api-gateway/: Dockerfile  go.mod
services/chat-service/: Cargo.toml  Dockerfile
services/chat-service/migrations/: 0001_init.sql
services/chat-service/src/: config.rs  domain.rs  error.rs  lib.rs  main.rs  metrics.rs  ports.rs  service.rs  web.rs
services/chat-service/src/infra/: mod.rs  postgres.rs  rabbit.rs
services/file-service/: Dockerfile  requirements.txt
services/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
services/ml-service/: Dockerfile  docker-compose.yml  requirements.txt
services/notification-service/: Dockerfile  go.mod  go.sum
services/sfu-service/: Dockerfile  go.mod  (+1 more)
(+163 files in other folders)
