[package]
name = "mq-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
lapin = { version = "4.4.0", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
